# taller-sesion-02

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/tests/: test_jwt_flow.py
